--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,5 +37,8 @@
           Logout
         </button>
       </li>
-      </ul>
+      <li *ngIf="this.userIsAuthenticated && this.currentUserName" class="nav-item">
+        Hi, {{ this.currentUserName }}
+      </li>
+    </ul>
 </nav>
